--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,21 @@
     font-family: 'Lato', sans-serif;
 }
 
+.color-primary {
+    color: #E55473;
+}
+
+.btn-primary {
+    margin-top: 32px;
+    padding: 20px 43px;
+    border-radius: 8px;
+    background-color: #E55473;
+    border: none;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+}
+
 /* banner section */
 .banner-container {
     display: flex;
@@ -22,25 +37,12 @@
     font-family: Lato;
     font-size: 60px;
     font-weight: 900;
-    margin-bottom: 0px;
 }
 
 .banner-para {
     color: rgba(39, 39, 39, 0.60);
     font-size: 18px;
     margin-top: 32px;
-    margin-bottom: 0px;
-}
-
-.banner-button {
-    margin-top: 32px;
-    padding: 20px 43px;
-    border-radius: 8px;
-    background-color: #E55473;
-    border: none;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
 }
 
 .banner-image {
@@ -49,4 +51,29 @@
 
 .banner-flower {
     width: 80%;
+}
+
+/* Hot deals */
+.hot-deals {
+    margin-top: 50px;
+    background-color: #E554730D;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 100px;
+}
+
+.deals-description {
+    text-align: center;
+}
+
+.deals-title {
+    font-size: 40px;
+    font-weight: 900;
+    margin-bottom: 25px;
+}
+
+.deals-para {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
 }
