--- a/styles/style.css
+++ b/styles/style.css
@@ -77,3 +77,39 @@
     color: rgba(39, 39, 39, 0.60);
     font-size: 18px;
 }
+
+/* Latest deals */
+.latest-deals {
+    width: 80%;
+    margin: auto;
+    background-image: url('../Asset/Rectangle\ 9.png');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 10px;
+}
+
+.latest-deals-container {
+    text-align: center;
+    padding: 100px 200px;
+}
+
+.latest-deals-title {
+    font-size: 40px;
+    font-weight: 900;
+}
+
+.latest-deals-para {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+
+}
+
+.latest-search {
+    height: 65px;
+    width: 450px;
+    border: none;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding-left: 20px;
+}
