--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,78 @@
     width: 80%;
 }
 
+/* Featured flower section */
+.featured-flowers {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+
+.featured-title {
+    font-size: 40px;
+    font-weight: 900;
+    color: #272727;
+}
+
+.featured-para {
+    margin-top: 24px;
+    font-size: 18px;
+    color: rgba(39, 39, 39, 0.60);
+    margin-bottom: 50px;
+}
+
+.featured-flower-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.featured-box {
+    border-radius: 50% 50% 0 0;
+    height: 470px;
+    width: 380px;
+}
+
+.featured-image-1 {
+    width: 75%;
+    padding-top: 76px;
+}
+
+.featured-image-2 {
+    width: 90%;
+    padding-top: 85px;
+}
+
+.featured-image-3 {
+    width: 70%;
+    padding-top: 70px;
+}
+
+.featured-flower {
+    width: 50%;
+}
+
+.box-1 {
+    background-color: #A7216226;
+}
+
+.box-2 {
+    background-color: #0597A026;
+}
+
+.box-3 {
+    background-color: #477D1126;
+}
+
+.name-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-decoration: underline;
+}
+
 /* Hot deals */
 .hot-deals {
     margin-top: 50px;
@@ -83,7 +155,8 @@
     width: 80%;
     margin: auto;
     text-align: center;
-    margin-bottom: 50px;
+    margin-top: 150px;
+    margin-bottom: 75px;
 }
 
 .insta-title {
@@ -105,7 +178,7 @@
 }
 
 .insta-image {
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
 .insta-flower {
