--- a/styles/style.css
+++ b/styles/style.css
@@ -125,6 +125,32 @@
     text-decoration: underline;
 }
 
+/* Indoor Plants section */
+.indoor-plants {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.indoor-plants-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.plant-box {
+    box-shadow: 10px 10px 5px rgba(169, 169, 169, 0.559);
+    margin: 10px;
+}
+
+.plant {
+    width: 300px;
+    height: 350px;
+}
+
+
 /* Hot deals */
 .hot-deals {
     margin-top: 50px;
