--- a/styles/style.css
+++ b/styles/style.css
@@ -150,6 +150,22 @@
     height: 350px;
 }
 
+/* Delivery section */
+.delivery {
+    width: 80%;
+    margin: auto;
+    background-color: #2727270D;
+    text-align: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.delivery-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 40px;
+}
 
 /* Hot deals */
 .hot-deals {
